fix image generator

--- a/ioc/wiki/processingmanager/applet/ImageGeneratorApplet.form
+++ b/ioc/wiki/processingmanager/applet/ImageGeneratorApplet.form
@@ -92,7 +92,7 @@
                   <Group type="102" attributes="0">
                       <Component id="jbGenerar" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
-                      <Component id="jbDesar" pref="65" max="32767" attributes="0"/>
+                      <Component id="jbDesar" pref="73" max="32767" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                   </Group>
                   <Group type="102" alignment="0" attributes="0">
@@ -169,7 +169,7 @@
                               <Component id="jbBuidarLlavor" min="-2" max="-2" attributes="0"/>
                           </Group>
                       </Group>
-                      <EmptySpace max="32767" attributes="0"/>
+                      <EmptySpace pref="24" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -235,7 +235,7 @@
                           <Component id="jlDescripcio" min="-2" max="-2" attributes="0"/>
                           <Component id="jspDescripcio" min="-2" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                      <EmptySpace min="0" pref="29" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
